--- a/admin/events.html
+++ b/admin/events.html
@@ -343,8 +343,6 @@
                   id="pr_id_46"
                   class="p-datatable p-component p-datatable-responsive-scroll"
                 >
-                  <!---->
-                  <!---->
                   <div class="p-datatable-header ng-star-inserted">
                     <div class="table-header p-d-flex ng-star-inserted">
                       <span _ngcontent-lvs-c133="" class="p-input-icon-left">
@@ -552,8 +550,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -576,8 +575,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -602,11 +602,6 @@
                             ></p-button>
                           </td>
                         </tr>
-                        <!---->
-                        <!---->
-                        <!---->
-                        <!---->
-                        <!---->
                         <tr class="ng-star-inserted">
                           <td>
                             <img
@@ -659,8 +654,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -683,8 +679,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -779,8 +776,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -803,8 +801,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -884,8 +883,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -908,8 +908,9 @@
                                   >&nbsp;</span
                                 >
                                 <!---->
-                                <!----><span class="p-ink"></span></button
-                            ></p-button>
+                                <!----><span class="p-ink"></span>
+                              </button>
+                            </p-button>
                             <p-button
                               icon="pi pi-pencil"
                               styleclass="p-button-warning"
@@ -2644,7 +2645,9 @@
                       <strong>Import Excel</strong>
                     </a>
                   </li>
-                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
                   <li>
                     <a
                       class="dropdown-item d-flex align-items-center gap flex-gap-10"
@@ -2869,7 +2872,9 @@
                       <strong>Import Excel</strong>
                     </a>
                   </li>
-                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <hr class="dropdown-divider" />
+                  </li>
                   <li>
                     <a
                       class="dropdown-item d-flex align-items-center gap flex-gap-10"
@@ -3607,6 +3612,12 @@
         </div>
       </div>
     </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/primeng/13.0.4/fesm2015/primeng-tooltip.mjs.map"></script>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
@@ -3614,11 +3625,5 @@
       crossorigin="anonymous"
     ></script>
     <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/primeng/13.0.4/fesm2015/primeng-tooltip.mjs.map"></script>
   </body>
 </html>
